fix: Remove description clipping and add scrolling

--- a/src/components/post-card/PostCard.module.css
+++ b/src/components/post-card/PostCard.module.css
@@ -12,12 +12,11 @@
 
 .postDescription {
     width: 100%;
-    height: 80px;
     padding: 0;
     margin-top: 25px;
     margin-bottom: 0;
-    overflow: hidden;
     text-overflow: ellipsis;
+    overflow-y:scroll;
 }
 
 .reportTypeBar {
@@ -36,7 +35,7 @@
     max-width: 175px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 3px;
 }
 
 .titleAndLocation h3 {
